# DesktopScreen

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c  server_ca_cert.pem  setting.html
main/include/: ds_system_data.h
main/include/data/: ds_data_icon.h  ds_data_page.h
main/include/hal/: ds_i2c.h
main/include/net/: ds_https_client.h  ds_sntp.h
main/include/ui/: ds_ui_fans.h  ds_ui_page_manage.h  ds_ui_qrpage.h  ds_ui_timepage.h  ds_ui_weatherpage.h
main/src/: ds_system_data.c
main/src/data/: ds_data_icon.c  ds_data_page.c
main/src/driver/: ds_ft6336.c
main/src/hal/: ds_gpio.c  ds_i2c.c  ds_timer.c
main/src/net/: ds_http_request.c  ds_http_server.c  ds_https_client.c  ds_https_request.c  ds_sntp.c  ds_wifi_ap.c  ds_wifi_ap_sta.c  ds_wifi_sta.c
main/src/ui/: ds_ui_page_manage.c  ds_ui_qrpage.c  ds_ui_timepage.c  ds_ui_tomatopage.c
